 syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "EventlogsServiceImpl";
option java_package = "devices";


package eventlogs;

// Interface exported by the server.
service EventLogsService {
  
  rpc getStatus(StringRequest) returns (StringResponse) {}
  rpc search(StringRequest) returns (StringResponse) {}

}


message StringRequest {
    string val = 1;
}

message StringResponse {
    string val = 1;
}

message MultiStringRequest {
  repeated StringRequest multirequest = 1;
}


